Freshen up with 2026 versions
**Major update** fixing long-EOL dependencies:

| Component | Before | After |
|---|---|---|
| Alpine | 3.12 | 3.21 |
| Zulu JRE | 13 | 21 |
| Jetty | 9.4.38 | 12.1.13 |
| PlantUML server | v1.2021.1 | v1.2026.8 |